Tue Aug 10 20:56:31 2010  Tanaka Akira  <akr@fsij.org>

	* lib/optparse.rb: suppress a warning.

	* test/test_mutex_m.rb: ditto.

Tue Aug 10 20:56:13 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (Date::Format::Bag): use Struct.
	  as an experimental.

Tue Aug 10 20:45:35 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_rename): Pathname#rename translated
	  from pathname.rb.

Tue Aug 10 20:16:19 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/resolv.rb (get_info): get rid of a warning.

Tue Aug 10 19:56:13 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: [ruby-core:31658]

Tue Aug 10 17:24:56 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* README.EXT.ja: rb_tainted_str_new_cstr() is an alias of
	  rb_tainted_str_new2().

Tue Aug 10 15:24:30 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c, ext/bigdecimal/bigdecimal.h,
	  ext/bigdecimal/extconf.rb: BASE and BASE_FIG are defined
	  based on the size of BDIGIT.

        * ext/bigdecimal/bigdecimal.c, ext/bigdecimal/bigdecimal.h:
	  use BDIGIT for Real#frac.

Tue Aug 10 15:19:45 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.h, ext/bigdecimal/bigdecimal.c:
	  add extern declaration of rb_cBigDecimal.

Tue Aug 10 14:09:31 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest::parse_uri):
	  rollup leading slashes. [ruby-core:31657]
	  patched by Jamison Wilde
	  NOTE: //authority/path is valid relative URI both RFC2396 and
	  RFC3986. So when give a relative URI-like string to URI lib,
	  users must care leading slashes.

Tue Aug 10 11:26:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/un.rb (httpd): SIGQUIT and SIGHUP are not guaranteed to exist.

Tue Aug 10 06:26:48 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_readlink): Pathname#readlink translated
	  from pathname.rb.

Mon Aug  9 22:15:19 2010  Tanaka Akira  <akr@fsij.org>
