@@ -1,3 +1,8 @@
+Tue Aug 10 21:18:04 2010  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* complex.c (nucomp_to_[ifr]): don't allow complex with in-exact
+	  imaginary zero to be converted.
+
 Tue Aug 10 20:56:31 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/optparse.rb: suppress a warning.
